--- a/nextjsprisma/.env
+++ b/nextjsprisma/.env
@@ -4,5 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://NAYAN:NAYAN@cluster0.u60zxbv.mongodb.net/New-Next-Prisma"
+DATABASE_URL='mongodb+srv://NAYAN:KUMAR@nayan-cluster0.zzdik.mongodb.net/New-Next-Prisma'
+# 
+# "mongodb+srv://NAYAN:NAYAN@cluster0.u60zxbv.mongodb.net/New-Next-Prisma"
+# "mongodb://localhost:27017/NAYAN-NEXT"
+
+# 
+# 
 # "mongodb+srv://NAYAN:KUMAR@nayan-cluster0.zzdik.mongodb.net/New-Next-Prisma?retryWrites=true&w=majority&appName=nayan-cluster0"
