--- a/nextjsprisma/package.json
+++ b/nextjsprisma/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "npx prisma generate && next dev",
-    "build": "next build",
+    "build": "ESLINT_NO_DEV_ERRORS=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "argon2": "^0.41.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.9",
@@ -18,14 +20,15 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/argon2": "^0.14.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5"
   }
 }
